# de-support-agent

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: cli.py  config.py  database.py  main.py  models.py  schemas.py
app/services/: analyzer.py  incident_service.py  knowledge.py  llm.py  sql_safety.py
data/: knowledge_base.json
tests/: test_analyzer.py  test_api.py  test_sql_safety.py
